# ntchess

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-windows.bat
qml/: AnalysisSettingsDialog.qml  AnalysisView.qml  ChessBoard.qml  IconBtn.qml  ImportDialog.qml  Main.qml  NewGameDialog.qml  PlayerBar.qml
src/: main.cpp
src/backend/: Board.cpp  Board.h  Game.cpp  Game.h  movegen.cpp  movegen.h  notation.cpp  notation.h  types.h  uci_engine.cpp  uci_engine.h
src/bridge/: GameBridge.cpp  GameBridge.h
